# .dotfiles

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile.test  Makefile  README.md  TODO-TODAY.md.gpg  _t  ansible.cfg  ansible.yml  antibody.txt  bashrc  circle.yml  distro-notes.md  distro-notes.txt  docker.zsh  fzf-helpers.zsh  gcloud.zsh  git.zsh  git_helpers.py  inputrc  inventory.aws_ec2.yml  kubectl.zsh  pre-commit  pyproject.toml  requirements.txt  requirements.yml  server_ansible.yml  setup.sh  setupSymlinks.py  setup_symlinks.py  software-to-test.md  t  todo.md  vimrc  zlogin  zsh_key_bindings.zsh  zshrc
conf/: Xresources  alacritty.yml  asciinema-config  cookiecutterrc  ctags  cvsignore  ginit.vim  gitconfig  global-gitignore  gpg-agent.conf  i3-config  i3blocks-config  inputrc  jsbeautifyrc  jshintrc  lazygit.yml  profile  ptpython_config.py  pudb.cfg  pylintrc  pythonrc  ripgreprc  sqliterc  ssh-base-config  taskrc  tern-config  tmux.conf  tsfmt.json  vimperatorrc  vitrc  xbindkeysrc  xfce4-terminalrc  zlogin
desktop-files/: lxde-dual-monitor.desktop  xbindkeys.desktop  xkbmap.desktop
gitconfig/: setup-git.sh
install/: alt-packages.sh  apt-essentials.sh  apt-install.sh  apt-packages.sh  brew-packages.sh  cli-helpers.sh  dev-tools.sh  dev_tools.py  dev_tools_test.py  distro-notes.txt  npm-packages.sh  other.sh  scala-deb.sh  third-party-apt.sh  third-party-packages.sh  third-party-scripts.sh  third-party.sh  vim-apt.sh
rcfiles/: eslintrc  jsbeautifyrc  jshintrc
scripts/: add-to-links.sh  add-xkbmap-68.sh  docker-sopcast.sh  install.sh  lock  (+22 more)
(+128 files in other folders)
