[tool.poetry]
name = "dotfiles"
version = "0.0.1"
description = ""
authors = ["Dani Hodovic <dani.hodovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9.6"
pyyaml = "^5.3"
jinja2 = "^2.11.3"
jmespath = "^0.9.5"
mitogen = "^0.2.9"
neovim = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
